# benkyo

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.claude/skills/_benkyo-shared/evals/: README.md  TRIGGER-OPTIMIZATION.md
.claude/skills/_benkyo-shared/references/: cli-cheatsheet.md  decision-tables.md  granularity-guide.md  literature-pointers.md  lost-learner-handling.md  nl-to-cli.md  self-eval-handling.md  session-boundaries.md
.claude/skills/benkyo-graph-edit/: SKILL.md
.claude/skills/benkyo-graph-edit/evals/: evals.json  trigger-eval.json
.claude/skills/benkyo-project-init/: SKILL.md
.claude/skills/benkyo-session-wrap/: SKILL.md
.claude/skills/benkyo-treatment-shift/: SKILL.md
.claude/skills/benkyo-tutoring/: SKILL.md
.codex-plugin/: plugin.json
src/benkyo/: __init__.py  __main__.py  _db.py  _input.py  _output.py  cli.py  db.py  errors.py  ids.py  paths.py  render.py  repository.py  traversal.py
src/benkyo/commands/: __init__.py  concept.py  edge.py  info.py  io_cmds.py  problem.py  project.py  render.py  traversal_cmds.py  treatment.py
tests/: conftest.py  test_db.py  test_encoding.py  test_ids.py  test_merge_fork.py  test_migration.py  test_paths.py  test_render.py  test_repository.py  test_session_end.py  test_traversal.py
tests/test_cli/: conftest.py  test_concept.py  test_edge.py  test_info.py  test_io.py  test_merge_fork.py  test_problem.py  test_project.py  test_render.py  test_traversal.py  test_treatment.py
(+8 files in other folders)
